--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -2,11 +2,24 @@
     margin:50px;
     padding:0;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 30px;
     list-style-type: none;
 }
 .productWrapper {
     border: 1px solid gray;
     border-radius: 20px;
+    cursor: pointer;
+}
+.imgWrapper {
+    margin:10px;
+    width: 90%;
+    height: auto;
+}
+.title{
+    font-size: 24px;
+}
+.price {
+    font-size: 20px;
+    color: gray;
 }
