--- a/src/pages/cart/Cart.module.css
+++ b/src/pages/cart/Cart.module.css
@@ -6,14 +6,14 @@
 .cartWrapper h5{
     font-size: 32px;
 }
-.popUpWrapper {
+
+.popUpContainer {
     position: absolute;
     width: 100%;
     height:100vh;
     top:0;
     left:0;
-    background-color: lightgray;
-    opacity: 0.5;
+    opacity: 1;
 }
 
 .itemWrapper {
@@ -43,10 +43,38 @@
     bottom: 70px;
     border: 1px solid lightgray;
     border-radius: 20px;
-    width: 50%;
+    width: 100%;
+    left: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.abort {
+    position: fixed;
+    right: 20px;
+    border-radius: 50%;
+    background-color: red;
+    color: white;
+    bottom: 200px;
     font-size: 24px;
-    left: 50%;
-    transform: translate(-50%, 0) ;
     padding: 20px;
-    background: gray;
+    border: none;
+}
+.button1 {
+    background-color: red;
+    height: 100%;
+    font-size: 24px;
+    border: none;
+    padding: 20px;
+    cursor: pointer;
+    color: white;
+}
+.button2{
+    background-color: green;
+    height: 100%;
+    font-size: 24px;
+    border: none;
+    padding: 20px;
+    cursor: pointer;
+    color: white;
 }
