--- a/src/pages/productDescription/ProductDescription.module.css
+++ b/src/pages/productDescription/ProductDescription.module.css
@@ -9,10 +9,26 @@
     bottom: 70px;
     border: 1px solid lightgray;
     border-radius: 20px;
-    width: 50%;
+    width: 100%;
+    left: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.button1 {
+    background-color: red;
+    height: 100%;
     font-size: 24px;
-    left: 50%;
-    transform: translate(-50%, 0) ;
+    border: none;
     padding: 20px;
-    background: gray;
+    cursor: pointer;
+    color: white;
+}
+.button2{
+    background-color: green;
+    height: 100%;
+    font-size: 24px;
+    border: none;
+    padding: 20px;
+    cursor: pointer;
+    color: white;
 }
